--- a/CSS/Portfolio/CSS/styles.css
+++ b/CSS/Portfolio/CSS/styles.css
@@ -79,6 +79,10 @@ body {
     text-align: justify;
 }
 
+.projects p {
+    padding: 15px;
+}
+
 .projectsimg {
     width: 295px;
     height: 170px;
